--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -2296,6 +2296,8 @@ shedding {
     I:menagerie.rat.lexiconDisplaySize=40
     I:menagerie.rat.metadata=0
     I:menagerie.rat.rate=-1
+
+    # Configuration of Shedding for witherSkeleton
     S:witherSkeleton.item=
     I:witherSkeleton.lexiconDisplaySize=40
     I:witherSkeleton.metadata=0
