--- a/config/enderio/EnderIO.cfg
+++ b/config/enderio/EnderIO.cfg
@@ -311,7 +311,7 @@
     B:updateLightingWhenHidingFacades=false
 
     # The range of the vacuum chest
-    D:vacumChestRange=6
+    I:vacumChestRange=6
 
     # The range of the wireless charger
     I:wirelessChargerRange=24
@@ -327,11 +327,6 @@ enchantments {
 
     # The chance of getting this enchantment in the enchantment table
     I:enchantmentSoulBoundWeight=1
-}
-
-
-enchantmentsoulboundweight {
-    I:Enchantments=1
 }
 
 
@@ -400,7 +395,6 @@ enchantmentsoulboundweight {
         Thaumcraft:ItemHoeThaumium
         Thaumcraft:ItemHoeElemental
         Thaumcraft:ItemHoeVoid
-        ThermalExpansion:tool.hoeInvar
         RotaryCraft:rotarycraft_item_steelhoe
         RotaryCraft:rotarycraft_item_bedhoe
      >
@@ -670,12 +664,6 @@ misc {
     # If true, adds burn duration tooltips to furnace fuels
     B:addFurnaceFuelTootip=true
 
-    # If true, adds ore dictionary registrations to tooltips
-    B:addOreDictionaryTooltips=false
-
-    # If true, adds the registered name for the item
-    B:addRegisterdNameTooltip=false
-
     # If false: you will not be able to access a ME access or crafting terminal using the Ender IO.
     B:enderIoMeAccessEnabled=true
 
@@ -933,11 +921,6 @@ rail {
 }
 
 
-replacewitherskeletons {
-    B:Misc=true
-}
-
-
 "soul binder settings" {
     # The number of levels required to create an attractor crystal.
     I:soulBinderAttractorCystalLevels=10
@@ -1042,18 +1025,12 @@ telepad {
 weather {
     # The fluid required (in mB) to set the world to clear weather
     I:weatherObeliskClearFluid=2000
-    S:weatherObeliskClearItem=minecraft:cake
-    I:weatherObeliskClearPower=10000000
 
     # The fluid required (in mB) to set the world to rainy weather
     I:weatherObeliskRainFluid=500
-    S:weatherObeliskRainItem=minecraft:water_bucket
-    I:weatherObeliskRainPower=2500000
 
     # The fluid required (in mB) to set the world to thundering weather
     I:weatherObeliskThunderFluid=1000
-    S:weatherObeliskThunderItem=minecraft:lava_bucket
-    I:weatherObeliskThunderPower=5000000
 }
 
 
