--- a/config/Reika/DragonAPI.cfg
+++ b/config/Reika/DragonAPI.cfg
@@ -32,7 +32,7 @@
     B:"Restore Obsidian Blast Resistance"=true
     B:"Slow Sync Packets - Only use this as a last resort"=false
     I:"Sync Packet ID"=182
-    B:"Use HashMap for Sound Categories - Only use if necessary"=false
+    B:"Use HashMap for Sound Categories - Only use if necessary"=true
 }
 
 
