--- a/config/bettersleeping.cfg
+++ b/config/bettersleeping.cfg
@@ -11,7 +11,7 @@ config {
     S:chanceToGetGoodNight=0.5
 
     # what is the chance that it will stop raining
-    D:chanceToStopRain=1.0
+    D:chanceToStopRain=0
 
     # morning offset when no alarm is found [ticks] [range: 0 ~ 23999, default: 0]
     I:defaultWakeUpTime=0
@@ -20,7 +20,7 @@ config {
     B:disableSleeping=false
 
     # Disable time changing when sleeping [default: false]
-    B:disableTimeChange=false
+    B:disableTimeChange=true
 
     # Enable Alarm clock [default: true]
     B:enableAlarmClock=true
@@ -41,7 +41,7 @@ config {
     B:enableSleepTicks=false
 
     # How many sleep ticks are given to player when lying in bed [range: 0 ~ 23999, default: 4]
-    I:giveSleepCounterOnSleep=4
+    I:giveSleepCounterOnSleep=400
 
     # How much hunger is lost for slept tick [0 = none]
     D:hungerPerSleptTick=0
@@ -50,7 +50,7 @@ config {
     I:maximumSleepCounter=18000
 
     # How many times you add tiredness when running
-    D:multiplicatorWhenSprinting=2.2
+    D:multiplicatorWhenSprinting=2
 
     # how much at maximum should a person oversleep with an alarm [ticks] [range: 0 ~ 23999, default: 400]
     I:oversleepWithAlarm=400
@@ -68,16 +68,16 @@ config {
     B:sleepOnGround=true
 
     # How much sleep is increased with every slept tick
-    D:sleepPerSleptTick=0.5
+    D:sleepPerSleptTick=2
 
     # How much sleep counter you spawn with [range: 0 ~ 2147483647, default: 18000]
     I:spawnSleepCounter=18000
 
     # How many player ticks between decreasing sleep counter [range: 1 ~ 23999, default: 4]
-    I:ticksPerSleepCounter=4
+    I:ticksPerSleepCounter=8
 
     # How much tiredness is added when the player jumps [range: 0 ~ 23999, default: 8]
-    I:tirednessJump=11
+    I:tirednessJump=8
 
     # wake up when the first person's energy fills up [default: false]
     B:wakeUpWithFirstPerson=false
@@ -241,6 +241,7 @@ gui {
     # Top offset of the sleepybar [range: 1 ~ 256, default: 8]
     I:guiOffsetTop=88
 }
+
 
 
 pill {
