--- a/config/rftools/dimlets.cfg
+++ b/config/rftools/dimlets.cfg
@@ -118,6 +118,9 @@ dimletsettings {
     I:"rarity.Material.tile.bluepower:teslatite_ore"=3
     I:rarity.Material.tile.dilithium_ore=3
     I:rarity.Material.tile.dimensionalShardBlock=4
+    I:"rarity.Material.tile.draconicevolution:draconiumOre"=6
+    I:rarity.Material.tile.endPowderOre=3
+    I:rarity.Material.tile.endiumOre=3
     I:rarity.Material.tile.gcBlockCore7=3
     I:rarity.Material.tile.gcBlockCore8=3
     I:rarity.Material.tile.gemOre10=3
@@ -128,6 +131,7 @@ dimletsettings {
     I:rarity.Material.tile.gemOre6=3
     I:rarity.Material.tile.gemOre8=3
     I:rarity.Material.tile.glass=2
+    I:rarity.Material.tile.instabilityOrbOre=6
     I:rarity.Material.tile.lightgem=4
     I:rarity.Material.tile.moonBlock2=3
     I:rarity.Material.tile.netherquartz=3
@@ -162,6 +166,7 @@ dimletsettings {
     I:rarity.Material.tile.stainedGlass7=2
     I:rarity.Material.tile.stainedGlass8=2
     I:rarity.Material.tile.stainedGlass9=2
+    I:rarity.Material.tile.stardustOre=3
     I:rarity.Material.tile.tconstruct.stoneore1=5
     I:rarity.Material.tile.tconstruct.stoneore2=5
     I:rarity.Material.tile.tconstruct.stoneore3=3
@@ -312,6 +317,9 @@ dimletsettings {
     I:"rfcreate.Material.tile.bluepower:teslatite_ore"=8000
     I:rfcreate.Material.tile.dilithium_ore=12000
     I:rfcreate.Material.tile.dimensionalShardBlock=15000
+    I:"rfcreate.Material.tile.draconicevolution:draconiumOre"=80000000
+    I:rfcreate.Material.tile.endPowderOre=15000
+    I:rfcreate.Material.tile.endiumOre=8000
     I:rfcreate.Material.tile.gcBlockCore7=8000
     I:rfcreate.Material.tile.gcBlockCore8=8000
     I:rfcreate.Material.tile.gemOre10=12000
@@ -322,6 +330,7 @@ dimletsettings {
     I:rfcreate.Material.tile.gemOre6=12000
     I:rfcreate.Material.tile.gemOre8=12000
     I:rfcreate.Material.tile.glass=600
+    I:rfcreate.Material.tile.instabilityOrbOre=200000
     I:rfcreate.Material.tile.lightgem=12000
     I:rfcreate.Material.tile.moonBlock2=8000
     I:rfcreate.Material.tile.netherquartz=14000
@@ -356,6 +365,7 @@ dimletsettings {
     I:rfcreate.Material.tile.stainedGlass7=600
     I:rfcreate.Material.tile.stainedGlass8=600
     I:rfcreate.Material.tile.stainedGlass9=600
+    I:rfcreate.Material.tile.stardustOre=8000
     I:rfcreate.Material.tile.tconstruct.stoneore1=500000
     I:rfcreate.Material.tile.tconstruct.stoneore2=400000
     I:rfcreate.Material.tile.tconstruct.stoneore3=10000
@@ -512,6 +522,9 @@ dimletsettings {
     I:"rfmaintain.Material.tile.bluepower:teslatite_ore"=4000
     I:rfmaintain.Material.tile.dilithium_ore=8000
     I:rfmaintain.Material.tile.dimensionalShardBlock=8000
+    I:"rfmaintain.Material.tile.draconicevolution:draconiumOre"=80000000
+    I:rfmaintain.Material.tile.endPowderOre=8000
+    I:rfmaintain.Material.tile.endiumOre=4000
     I:rfmaintain.Material.tile.gcBlockCore7=4000
     I:rfmaintain.Material.tile.gcBlockCore8=4000
     I:rfmaintain.Material.tile.gemOre10=2500
@@ -522,6 +535,7 @@ dimletsettings {
     I:rfmaintain.Material.tile.gemOre6=2500
     I:rfmaintain.Material.tile.gemOre8=2500
     I:rfmaintain.Material.tile.glass=400
+    I:rfmaintain.Material.tile.instabilityOrbOre=100000
     I:rfmaintain.Material.tile.lightgem=6000
     I:rfmaintain.Material.tile.moonBlock2=4000
     I:rfmaintain.Material.tile.netherquartz=6000
@@ -556,6 +570,7 @@ dimletsettings {
     I:rfmaintain.Material.tile.stainedGlass7=300
     I:rfmaintain.Material.tile.stainedGlass8=300
     I:rfmaintain.Material.tile.stainedGlass9=300
+    I:rfmaintain.Material.tile.stardustOre=4000
     I:rfmaintain.Material.tile.tconstruct.stoneore1=25000
     I:rfmaintain.Material.tile.tconstruct.stoneore2=20000
     I:rfmaintain.Material.tile.tconstruct.stoneore3=3000
@@ -710,6 +725,9 @@ dimletsettings {
     I:"ticks.Material.tile.bluepower:teslatite_ore"=700
     I:ticks.Material.tile.dilithium_ore=800
     I:ticks.Material.tile.dimensionalShardBlock=500
+    I:"ticks.Material.tile.draconicevolution:draconiumOre"=20000
+    I:ticks.Material.tile.endPowderOre=700
+    I:ticks.Material.tile.endiumOre=700
     I:ticks.Material.tile.gcBlockCore7=700
     I:ticks.Material.tile.gcBlockCore8=700
     I:ticks.Material.tile.gemOre10=400
@@ -720,6 +738,7 @@ dimletsettings {
     I:ticks.Material.tile.gemOre6=400
     I:ticks.Material.tile.gemOre8=400
     I:ticks.Material.tile.glass=30
+    I:ticks.Material.tile.instabilityOrbOre=2000
     I:ticks.Material.tile.lightgem=200
     I:ticks.Material.tile.moonBlock2=700
     I:ticks.Material.tile.netherquartz=400
@@ -754,6 +773,7 @@ dimletsettings {
     I:ticks.Material.tile.stainedGlass7=30
     I:ticks.Material.tile.stainedGlass8=30
     I:ticks.Material.tile.stainedGlass9=30
+    I:ticks.Material.tile.stardustOre=700
     I:ticks.Material.tile.tconstruct.stoneore1=15000
     I:ticks.Material.tile.tconstruct.stoneore2=10000
     I:ticks.Material.tile.tconstruct.stoneore3=1000
