--- a/config/Morpheus.cfg
+++ b/config/Morpheus.cfg
@@ -9,9 +9,9 @@ groundlevel {
 settings {
     B:AlertEnabled=true
     B:IncludeMiners=true
-    S:OnMorningText=Wakey, wakey, rise and shine... Good Morning everyone! Zombies want yer brains!
-    S:OnSleepText=is now sleeping...a perfect target!
-    S:OnWakeText=has left their bed, hunted by zombies!
+    S:OnMorningText=You wake feeling refreshed, ready to be eaten by zombies.
+    S:OnSleepText=is passing on, into the land of Nod.
+    S:OnWakeText=is having troubles sleeping.
     I:SleeperPerc=50
 }
 
