--- a/config/Reika/ChromatiCraft.cfg
+++ b/config/Reika/ChromatiCraft.cfg
@@ -23,7 +23,7 @@
     B:"Adjacency Upgrades Require Energy"=false
     B:"Allow Danger in Rainbow Forests"=true
     B:"Allow duplication wand to copy TileEntities"=false
-    B:"Always Respawn EnderDragon"=true
+    B:"Always Respawn EnderDragon"=false
     B:"Auxiliary Fragment Acquisition"=false
     I:"Cave Lighter Range"=128
     I:"Cave Lighter Zone Size"=8
