--- a/config/Reika/DragonAPI.cfg
+++ b/config/Reika/DragonAPI.cfg
@@ -20,8 +20,8 @@
 
 "control setup" {
     B:"Admins Bypass Permissions"=true
-    B:"Attempt to Repair Environment Sanity"=false
-    B:"Check Environment Sanity"=false
+    B:"Attempt to Repair Environment Sanity"=true
+    B:"Check Environment Sanity"=true
     B:"Compare mod file hashes between client and server"=true
     B:"Disallow Null-Item ItemStacks to Prevent Crashes"=true
     B:"Force Gregtech Ore Compatibility"=true
