--- a/config/bettersleeping.cfg
+++ b/config/bettersleeping.cfg
@@ -2,7 +2,7 @@
 
 config {
     # cap energy bar on the maximum allowed value [default: false]
-    B:capEnergyBar=false
+    B:capEnergyBar=true
 
     # chance to get bad morning debuffs [range: 0.0 ~ 1.0, default: 0.3]
     S:chanceToGetBadNight=0.3
@@ -41,7 +41,7 @@ config {
     B:enableSleepTicks=false
 
     # How many sleep ticks are given to player when lying in bed [range: 0 ~ 23999, default: 4]
-    I:giveSleepCounterOnSleep=400
+    I:giveSleepCounterOnSleep=40
 
     # How much hunger is lost for slept tick [0 = none]
     D:hungerPerSleptTick=0
