--- a/config/DraconicEvolution.cfg
+++ b/config/DraconicEvolution.cfg
@@ -17,7 +17,7 @@ general {
     B:"Bow Block Damage"=true
 
     # Set to false to disable the DE dragons ability to break blocks (dose not effect vanilla dragon)
-    B:"Can dragon break blocks"=true
+    B:"Can dragon break blocks"=false
 
     # This sets how far apart the chaos islands will spawn. The islands spawn in a grid pattern.
     I:"Chaos Island Separation"=10000
@@ -61,7 +61,7 @@ general {
     B:"Fast Summon Ritual"=false
 
     # Should Chaos Islands be generated
-    B:"Generate Chaos Islands"=true
+    B:"Generate Chaos Islands"=false
 
     # Should Ender comets be generated
     B:"Generate Ender Comets"=false
@@ -82,7 +82,7 @@ general {
     B:"Pigmen Blood Rage"=true
 
     # Limits the max speed of players. Recommend between 0.5 - 1.0 for servers
-    D:"Player speed cap"=0.5
+    D:"Player speed cap"=100
 
     # If true items dropped by a tool in aoe mode will despawn after 5 seconds
     B:"Rapidly despawn aoe mined items"=false
