Zombies break fewer things.

--- a/config/ImmersiveEngineering.cfg
+++ b/config/ImmersiveEngineering.cfg
@@ -377,9 +377,16 @@ oregen {
 
 
 potions {
+    # The potion ID for the Conductive potion effect
     I:Conductive=30
+
+    # The potion ID for the Flammable potion effect
     I:Flammable=27
+
+    # The potion ID for the Slippery potion effect
     I:Slippery=28
+
+    # The potion ID for the Sticky potion effect
     I:Sticky=31
 }
 
