--- a/config/buildcraft/compat.cfg
+++ b/config/buildcraft/compat.cfg
@@ -1,6 +1,7 @@
 # Configuration file
 
 client {
+    # Should NEI facade recipes be hidden? [default: false]
     B:hideFacadeRecipes=false
 }
 
@@ -43,6 +44,7 @@ modules {
 
 
 waila {
+    # Should WAILA tooltips show whether a block is supported by Builders or not? [default: false]
     B:showBuilderSupportDebug=false
 }
 
