--- a/config/climatecontrol.cfg
+++ b/config/climatecontrol.cfg
@@ -79,6 +79,12 @@
 }
 
 
+##########################################################################################################
+# climate incidences
+#--------------------------------------------------------------------------------------------------------#
+# Blocks of land are randomly assigned to each zone with a frequency proportional to the incidence. Processing eliminates some extreme climates later, especially for quarter size zones. Consider doubling hot and snowy incidences for quarter size zones.
+##########################################################################################################
+
 "climate incidences" {
     # relative incidence of cool zones like forest/plains/hills/taiga/roofed forest
     I:"Cool Zone Incidence"=2
@@ -93,6 +99,12 @@
     I:"Warm Zone Incidence"=2
 }
 
+
+##########################################################################################################
+# climate zone parameters
+#--------------------------------------------------------------------------------------------------------#
+# Full-size is similar to 1.7 defaults. Half-size creates zones similar to pre-1.7 snowy zones. Quarter-size creates fairly small zones but the hot and snowy incidences are limited
+##########################################################################################################
 
 "climate zone parameters" {
     # True freezes oceans in snowy latitudes. Only used with latitudinal climates.
@@ -124,6 +136,12 @@
 }
 
 
+##########################################################################################################
+# ocean control parameters
+#--------------------------------------------------------------------------------------------------------#
+# Frequencies are x per thousand but a little goes a very long way because seeds grow a lot. SeparateLandmasses = true makes an oceanic world with these settings andSeparateLandmasses = false makes a continental world
+##########################################################################################################
+
 "ocean control parameters" {
     # frequency of large continent seeds, about 8000x16000
     I:"Incidence of Continents,Large"=0
@@ -144,6 +162,12 @@
     B:SeparateLandmasses=false
 }
 
+
+##########################################################################################################
+# oceanbiomeclimates
+#--------------------------------------------------------------------------------------------------------#
+# Climate Types are: SNOWY,COOL,WARM,HOT,OCEAN,DEEP_OCEANMEDIUM,PLAINS,LAND.  MEDIUM is COOL and WARM, PLAINS is COOL and WARM and HOT, LAND is all four land
+##########################################################################################################
 
 oceanbiomeclimates {
     S:"DeepOcean climate"=DEEP_OCEAN
@@ -168,6 +192,12 @@ oceanbiomevillages {
     B:"Ocean hasVillages"=false
 }
 
+
+##########################################################################################################
+# vanillabiomeclimates
+#--------------------------------------------------------------------------------------------------------#
+# Climate Types are: SNOWY,COOL,WARM,HOT,OCEAN,DEEP_OCEANMEDIUM,PLAINS,LAND.  MEDIUM is COOL and WARM, PLAINS is COOL and WARM and HOT, LAND is all four land
+##########################################################################################################
 
 vanillabiomeclimates {
     S:"Birch Forest Hills M climate"=DEFAULT
