--- a/config/RTG/rtg.cfg
+++ b/config/RTG/rtg.cfg
@@ -63,7 +63,7 @@ caves {
     # Must be set to TRUE for the other cave settings to have any effect.
     # If FALSE, RTG won't interfere with cave generation at all.
     #  [default: true]
-    B:"Enable Cave Modifications"=true
+    B:"Enable Cave Modifications"=false
 
     #  [default: true]
     B:"Enable Caves"=true
@@ -191,7 +191,7 @@ ravines {
     # Must be set to TRUE for the other ravine settings to have any effect.
     # If FALSE, RTG won't interfere with ravine generation at all.
     #  [default: true]
-    B:"Enable Ravine Modifications"=true
+    B:"Enable Ravine Modifications"=false
 
     #  [default: false]
     B:"Enable Ravines"=false
