--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -4387,6 +4387,7 @@ chromaticraft {
     B:chromaticraftblockglowsapling=false
     B:chromaticraftblockgol=false
     B:chromaticraftblockgolcontrol=false
+    B:chromaticraftblockgravity=false
     B:chromaticraftblockheatlamp=false
     B:chromaticraftblockhive=true
     B:chromaticraftblockhover=false
@@ -4409,6 +4410,7 @@ chromaticraft {
     B:chromaticraftblockmusictrigger=true
     B:chromaticraftblockpad=true
     B:chromaticraftblockpath=true
+    B:chromaticraftblockpinball=false
     B:chromaticraftblockplant=false
     B:chromaticraftblockportal=false
     B:chromaticraftblockpowertree=false
@@ -4457,6 +4459,7 @@ chromaticraft {
     B:chromaticraftblocktilemodelled3=false
     B:chromaticraftblocktileplant=false
     B:chromaticraftblocktnt=false
+    B:chromaticraftblocktrail=false
     B:chromaticraftblockvoidrift=false
 }
 
@@ -4885,6 +4888,8 @@ draconicevolution {
 electricraft {
     B:electricraftblockbattery=false
     B:electricraftblockcable=false
+    B:electricraftblockeubattery=false
+    B:electricraftblockeucable=false
     B:electricraftblockeusplit=false
     B:electricraftblockmachine=false
     B:electricraftblockore=true
