--- a/config/ClimateControl/ThaumcraftInCC.cfg
+++ b/config/ClimateControl/ThaumcraftInCC.cfg
@@ -1,15 +1,15 @@
 # Configuration file
 
 "assorted parameters" {
-    B:ThaumcraftBiomesOn=true
+    B:ThaumcraftBiomesOn=false
     B:ThaumcraftInNewDimensons=true
 }
 
 
 thaumcraftbiomeclimates {
-    S:"Eerie climate"=PLAINS
-    S:"Magical Forest climate"=PLAINS
-    S:"Tainted climate"=PLAINS
+    S:"Eerie climate"=DEFAULT
+    S:"Magical Forest climate"=DEFAULT
+    S:"Tainted climate"=DEFAULT
 }
 
 
