--- a/config/ClimateControl/biomesoplentyInCC.cfg
+++ b/config/ClimateControl/biomesoplentyInCC.cfg
@@ -1,7 +1,7 @@
 # Configuration file
 
 "assorted parameters" {
-    B:BoPBiomesOn=true
+    B:BoPBiomesOn=false
     B:BoPInNewDimensons=true
 }
 
@@ -58,7 +58,7 @@ bopclimates {
     S:"Meadow Forest climate"=DEFAULT
     S:"Meadow climate"=COOL
     S:"Moor climate"=COOL
-    S:"Mountain climate"=MEDIUM
+    S:"Mountain climate"=WARM
     S:"Mystic Grove climate"=MEDIUM
     S:"Oasis climate"=DEFAULT
     S:"Ominous Woods climate"=COOL
