--- a/config/Reika/ChromatiCraft.cfg
+++ b/config/Reika/ChromatiCraft.cfg
@@ -14,6 +14,8 @@
     B:"[E05CB0039] Ender Forest Coloring"=false
     I:"[E596774F6] Energy Buffer Overlay Location"=0
     B:"[L3086DD22] Lamp Noises"=true
+    I:"[P4A553F9F] Progression Notification Duration"=800
+    B:"[P53497A68] Play Dimension Join Sound For Others"=true
     B:"[R3B2C274D] Reload Handbook Data on Open"=false
     B:"[U08787298] Use vanilla keybind system for ability selection GUI"=false
 }
@@ -60,6 +62,7 @@
     B:"Spawn with CC Lexicon"=true
     I:"Vanilla Dye Drop Percentage"=100
     B:"World Rifts Chunkload"=false
+    B:"World Shift Can Move TileEntities"=false
 }
 
 
@@ -159,6 +162,16 @@
 
 "other ids" {
     I:"Dimension ID"=60
+}
+
+
+"other options" {
+    S:"Guardian Stone Exceptions" <
+        none#RIGHT_CLICK_AIR
+        none#RIGHT_CLICK_BLOCK
+        none#LEFT_CLICK_BLOCK
+        ExtraUtilities:dark_portal:2#RIGHT_CLICK_BLOCK
+     >
 }
 
 
