--- a/config/Reika/RotaryCraft.cfg
+++ b/config/Reika/RotaryCraft.cfg
@@ -43,13 +43,13 @@
     I:STEAMENGINE=24014
     I:STEELSHAFT=24015
     I:SUCKEDINTOJET=24012
+    I:WORKTABLE=24002
 }
 
 
 "client specific" {
     B:"[C680FA838] Color Blind Mode"=false
     D:"[E1736FE4B] Engine Volume"=1.0
-    B:"[EF993F080] Engine Running Sounds"=true
     D:"[MB0CC4635] Machine Volume Multiplier"=1.0
     B:"[R3B2C274D] Reload Handbook Data on Open"=false
     B:"[R5CB4A6D2] Render projector lines"=true
