--- a/config/enderio/EnderIO.cfg
+++ b/config/enderio/EnderIO.cfg
@@ -552,6 +552,9 @@ inventorypanel {
     # If true the magnet will also work in the main inventory, not just the hotbar
     B:magnetAllowInMainInventory=false
 
+    # If true the magnet can be used as a battery.
+    B:magnetAllowPowerExtraction=false
+
     # The BaublesType the magnet should be, 'AMULET', 'RING' or 'BELT' (requires Baubles to be installed and magnetAllowInBaublesSlot to be on)
     S:magnetBaublesType=AMULET
 
@@ -1019,6 +1022,12 @@ telepad {
 
     # The amount of RF required for an interdimensional teleport.
     I:powerInterdimensional=400000
+
+    # The number of RF/t consumed by a telepad.
+    I:telepadPowerPerTickRF=1000
+
+    # The amount of RF a telepad can store.
+    I:telepadPowerStorageRF=100000
 }
 
 
