--- a/config/Reika/ChromatiCraft.cfg
+++ b/config/Reika/ChromatiCraft.cfg
@@ -22,7 +22,7 @@
 
 
 "control setup" {
-    B:"Adjacency Upgrades Require Energy"=false
+    B:"Adjacency Upgrades Require Energy"=true
     B:"Allow Danger in Rainbow Forests"=true
     B:"Allow duplication wand to copy TileEntities"=false
     B:"Always Respawn EnderDragon"=false
@@ -57,7 +57,7 @@
     I:"Rainbow Forest Biome Weight"=5
     D:"Rainbow Leaf Gold Apple Drop Percentage"=0.25
     B:"Rainbow Trees Spread Rainbow Forests"=false
-    B:Retrogeneration=false
+    B:Retrogeneration=true
     B:"Run Worldgen in Superflat Worlds"=false
     B:"Spawn with CC Lexicon"=true
     I:"Vanilla Dye Drop Percentage"=100
