--- a/config/SpecialAI.cfg
+++ b/config/SpecialAI.cfg
@@ -110,7 +110,7 @@ passive_griefing {
 
     # (Block list) Specific blocks that will NOT be griefed by mobs. Defaults to none.
     # Only really useful if "break_lights" is enabled or when you whitelist an entire namespace (*) to create safe light sources, prevent mobs from breaking normal world gen that produces light, or for removing a few blocks from a namespace that you don't want mobs to break.
-    S:target_blacklist=Ztones:lampb,Ztones:lampf,Ztones:lampt,Railcraft:*,ChromatiCraft:*,Forestry:beehives 1
+    S:target_blacklist=Ztones:lampb,Ztones:lampf,Ztones:lampt,Railcraft:*,ChromatiCraft:*,Forestry:beehives 1,Forestry:beehives 2,Forestry:beehives 3,Forestry:beehives 4,Forestry:beehives 5,Forestry:beehives 6,Forestry:beehives 7
 
     # (Block list) Specific blocks that will be griefed by mobs. Defaults to farmland, beds, crafting tables, wooden doors, wooden trapdoors, fence gates, and ladders.
     # This is a comma-separated list. You may specify metadata (0-15) with a space after the id, followed by the metadata. For example, "cake" will cause mobs to target all cakes, while "cake 0" will cause mobs to only target cakes that have not been partially eaten.
@@ -157,7 +157,7 @@ special_ai {
     I:ai_shaman=1
     I:ai_spawner=1
     I:ai_sprint=1
-    I:ai_thief=1
+    I:ai_thief=0
     I:ai_throw=1
     I:ai_throw_player=1
 }
