--- a/config/WitchingGadgets.cfg
+++ b/config/WitchingGadgets.cfg
@@ -27,7 +27,7 @@ other {
     B:"Allow modifications to newly applied PotionEffects"=true
     I:"Cloak Animation Mod"=2
     B:"Enable clusters"=true
-    B:"Enable transmutations"=true
+    B:"Enable transmutations"=false
     I:"Enchantment ID: Gemstone Backstab"=78
     I:"Enchantment ID: Gemstone Brittle"=65
     I:"Enchantment ID: Gemstone Invisible Gear"=75
