--- a/config/climatecontrol.cfg
+++ b/config/climatecontrol.cfg
@@ -1,65 +1,173 @@
 # Configuration file
 
 "assorted parameters" {
+    # Use more random generators, better behaved rivers, and larger rare climates
     B:"0.5 generation"=true
+
+    # Use 1.6 compatibility mode
     B:1.6Compatibility=false
+
+    # place little islands near shore rather than in deep ocean
     B:"Allow Derpy Islands"=false
+
+    # Biome size, exponential: 4 is regular and 6 is large biomes
     I:"Biome Size"=4
+
+    # per thousand; vanilla is 10
     I:"Mushroom Island Incidence"=0
+
+    # generate as if CC weren't on; for loading pre-existing worlds or just preventing chunk boundaries
     B:"No Generation Changes"=false
+
+    # suppress Bop sub-biome generation
     B:NoBoPSubBiomes=false
+
+    # Percentage of rivers prevented; changes cause chunk boundaries at some rivers
     I:PercentRiverReduction=0
+
+    # increase smoothing steps; also shrinks unusual biomes some; changing produces occaisional chunk walls
     B:"Smoother Coastlines"=true
+
+    # add testing routines and crash in suspicious circumstances
     B:TestingMode=false
     B:VanillaBiomesOn=true
+
+    # Generate land masses and climate zones similar to vanilla 1.7
     B:VanillaLandAndClimate=false
+
+    # True for triple-width rivers
     B:WiderRivers=false
+
+    # impose Climate Control generation on the Biomes o' Plenty world type
     B:alterBoPWorlds=false
+
+    # impose Climate Control generation on Highlands world types
     B:alterHighlandsWorlds=false
+
+    # biomes not saved on edges; more than 3 has no effect; -1 deactivates saving biomes
     I:biomeRingsNotSaved=3
+
+    # Number of Chunk Biome layouts cached. Above 500 is ignored. 0 or below shuts off chunk info caching
     I:cacheSize=0
+
+    # climate not saved on edges; -1 deactivates saving climates
     I:climateRingsNotSaved=3
+
+    # Have Climate Control set the biomes for village generation; may be incompatible with village mods
     B:controlVillageBiomes=false
+
+    # Comma-delimited list of externalBiome Names. No quotes or line returnsYou will have to reload Minecraft after changing this.Names not in the list aren't removed from the configs but they have no effect
     S:externalBiomeNames=
+
+    # force small continent near origin
     B:forceStartContinent=true
+
+    # max height value for allowing rivers; 10.0 allows everything; 0.75 is plains but no hills
     D:maxChasm=10.0
+
+    # Maximum Number of Rescue attempts. Negative numbers mean no limit
     I:rescueLimit=-1
+
+    # subbiomes not saved on edges, default 3, -1 deactivates saving sub-biomes
     I:subBiomeRingsNotSaved=-1
+
+    # suppress Climate Control generation in default, large biomes, and amplified worlds
     B:suppressInStandardWorlds=false
+
+    # True for double-width beaches
     B:wideBeaches=false
 }
 
 
+##########################################################################################################
+# climate incidences
+#--------------------------------------------------------------------------------------------------------#
+# Blocks of land are randomly assigned to each zone with a frequency proportional to the incidence. Processing eliminates some extreme climates later, especially for quarter size zones. Consider doubling hot and snowy incidences for quarter size zones.
+##########################################################################################################
+
 "climate incidences" {
+    # relative incidence of cool zones like forest/plains/hills/taiga/roofed forest
     I:"Cool Zone Incidence"=2
+
+    # relative incidence of hot zones like savanna/desert/plains/mesa
     I:"Hot Zone Incidence"=1
+
+    # relative incidence of snowy zones
     I:"Snowy Zone Incidence"=1
+
+    # relative incidence of warm zones like forest/plains/hills/jungle/swamp
     I:"Warm Zone Incidence"=2
 }
 
 
+##########################################################################################################
+# climate zone parameters
+#--------------------------------------------------------------------------------------------------------#
+# Full-size is similar to 1.7 defaults. Half-size creates zones similar to pre-1.7 snowy zones. Quarter-size creates fairly small zones but the hot and snowy incidences are limited
+##########################################################################################################
+
 "climate zone parameters" {
+    # True freezes oceans in snowy latitudes. Only used with latitudinal climates.
     B:"Frozen Icecaps"=false
+
+    # half the climate zone size from vanilla, unless quartering
     B:"Half Zone Size"=true
+
+    # Place mountains in chains
     B:"Mountains in Mountain Chains"=false
+
+    # quarter the climate zone size from vanilla
     B:"Quarter Zone Size"=false
+
+    # ignore climate zones altogether
     B:"Random Biomes"=false
+
+    # Number of climate zones to shift the band from the default of the warm - to - cool transition at 0. Positive numbers shift the bands up.
     I:bandedClimateOffset=0
+
+    # Width of banded climates (climate depends on latitude). 0 or less for normal rules. Width is in terms of climate zones, whatever they are
     I:bandedClimateWidth=-1
+
+    # X offset for initial spawn search in blocks
     I:xSpawnOffset=0
+
+    # Z offset for initial spawn search in blocks
     I:zSpawnOffset=0
 }
 
 
+##########################################################################################################
+# ocean control parameters
+#--------------------------------------------------------------------------------------------------------#
+# Frequencies are x per thousand but a little goes a very long way because seeds grow a lot. SeparateLandmasses = true makes an oceanic world with these settings andSeparateLandmasses = false makes a continental world
+##########################################################################################################
+
 "ocean control parameters" {
+    # frequency of large continent seeds, about 8000x16000
     I:"Incidence of Continents,Large"=0
+
+    # frequency of medium continent seeds, about 4000x8000
     I:"Incidence of Continents,Medium"=60
+
+    # frequency of small continent seeds, about 2000x4000
     I:"Incidence of Continents,Small"=120
+
+    # frequency of large island seeds, about 500x1000
     I:"Incidence of Islands,Large"=60
+
+    # frequency of medium island seeds, about 250x500, but they tend to break up into archipelagos
     I:"Incidence of Islands,Medium"=30
-    B:SeparateLandmasses=true
+
+    # True mostly stops landmasses merging.With default settings you will get an oceanic world if true and a continental world if false
+    B:SeparateLandmasses=false
 }
 
+
+##########################################################################################################
+# oceanbiomeclimates
+#--------------------------------------------------------------------------------------------------------#
+# Climate Types are: SNOWY,COOL,WARM,HOT,OCEAN,DEEP_OCEANMEDIUM,PLAINS,LAND.  MEDIUM is COOL and WARM, PLAINS is COOL and WARM and HOT, LAND is all four land
+##########################################################################################################
 
 oceanbiomeclimates {
     S:"DeepOcean climate"=DEEP_OCEAN
@@ -84,6 +192,12 @@ oceanbiomevillages {
     B:"Ocean hasVillages"=false
 }
 
+
+##########################################################################################################
+# vanillabiomeclimates
+#--------------------------------------------------------------------------------------------------------#
+# Climate Types are: SNOWY,COOL,WARM,HOT,OCEAN,DEEP_OCEANMEDIUM,PLAINS,LAND.  MEDIUM is COOL and WARM, PLAINS is COOL and WARM and HOT, LAND is all four land
+##########################################################################################################
 
 vanillabiomeclimates {
     S:"Birch Forest Hills M climate"=DEFAULT
