--- a/config/dsurround/dsurround.cfg
+++ b/config/dsurround/dsurround.cfg
@@ -151,7 +151,7 @@ player {
     B:"Suppress Potion Particles"=false
 
     # Controls display of damage pop-offs when an entity is damaged [default: true]
-    B:"Damage Popoffs"=true
+    B:"Damage Popoffs"=false
 
     # Amount of health bar remaining to trigger player hurt sound [range: 0 ~ 10, default: 8]
     I:"Hurt Threshold"=8
