--- a/config/enviromine/profiles/default/CustomProperties/ChromatiCraft.cfg
+++ b/config/enviromine/profiles/default/CustomProperties/ChromatiCraft.cfg
@@ -877,3 +877,40 @@ blocks {
 }
 
 
+##########################################################################################################
+# dimension
+#--------------------------------------------------------------------------------------------------------#
+# Customise dimension environments
+##########################################################################################################
+
+dimension {
+
+    Chroma {
+        I:"01.Dimension ID"=60
+        B:"02.Allow Config Override"=true
+        B:"03.Track Sanity"=true
+        B:"04.Dark Affects Sanity"=true
+        D:"05.Sanity Multiplier"=1.0
+        B:"06.Track Air Quility"=true
+        D:"07.Air Quility Multiplier"=1.0
+        B:"08.Track Hydration"=true
+        D:"09.Hydration Multiplier"=1.0
+        B:"10.Track Temperature"=true
+        D:"11.Temperature Multiplier"=1.0
+        B:"12.Day/Night Affects Temp"=true
+        B:"13.Weather Affects Temp"=true
+        B:"14.Generate Mineshafts"=true
+        I:"15.Where is Sea Level"=340
+
+        # Use a negitive value to skip shaft entrance checks [range: -255 ~ 255, default: 12]
+        I:"16.Mine Y height"=-192
+        D:"17.Base Temperature Rate"=0.0
+        D:"18.Base Hydration Rate"=0.0
+        D:"19.Base Sanity Rate"=0.0
+        D:"20.Base Air Quality Rate"=0.0
+        B:"20.Enable Physics"=true
+    }
+
+}
+
+
