--- a/config/Reika/ChromatiCraft.cfg
+++ b/config/Reika/ChromatiCraft.cfg
@@ -57,7 +57,7 @@
     I:"Rainbow Forest Biome Weight"=5
     D:"Rainbow Leaf Gold Apple Drop Percentage"=0.25
     B:"Rainbow Trees Spread Rainbow Forests"=false
-    B:Retrogeneration=true
+    B:Retrogeneration=false
     B:"Run Worldgen in Superflat Worlds"=false
     B:"Spawn with CC Lexicon"=true
     I:"Vanilla Dye Drop Percentage"=100
