--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -4436,6 +4436,7 @@ chromaticraft {
     B:chromaticraftblocktieredore.10=true
     B:chromaticraftblocktieredore.11=true
     B:chromaticraftblocktieredore.12=true
+    B:chromaticraftblocktieredore.13=true
     B:chromaticraftblocktieredore.2=true
     B:chromaticraftblocktieredore.3=true
     B:chromaticraftblocktieredore.4=true
