--- a/config/enviromine/profiles/default/CustomProperties/GalacticraftCore.cfg
+++ b/config/enviromine/profiles/default/CustomProperties/GalacticraftCore.cfg
@@ -11,18 +11,18 @@ dimension {
     Station {
         I:"01.Dimension ID"=-5025
         B:"02.Allow Config Override"=true
-        B:"03.Track Sanity"=true
-        B:"04.Dark Affects Sanity"=true
+        B:"03.Track Sanity"=false
+        B:"04.Dark Affects Sanity"=false
         D:"05.Sanity Multiplier"=1.0
-        B:"06.Track Air Quility"=true
+        B:"06.Track Air Quility"=false
         D:"07.Air Quility Multiplier"=1.0
-        B:"08.Track Hydration"=true
+        B:"08.Track Hydration"=false
         D:"09.Hydration Multiplier"=1.0
-        B:"10.Track Temperature"=true
+        B:"10.Track Temperature"=false
         D:"11.Temperature Multiplier"=1.0
-        B:"12.Day/Night Affects Temp"=true
-        B:"13.Weather Affects Temp"=true
-        B:"14.Generate Mineshafts"=true
+        B:"12.Day/Night Affects Temp"=false
+        B:"13.Weather Affects Temp"=false
+        B:"14.Generate Mineshafts"=false
         I:"15.Where is Sea Level"=340
 
         # Use a negitive value to skip shaft entrance checks [range: -255 ~ 255, default: 12]
@@ -37,18 +37,18 @@ dimension {
     Stations {
         I:"01.Dimension ID"=-5026
         B:"02.Allow Config Override"=true
-        B:"03.Track Sanity"=true
-        B:"04.Dark Affects Sanity"=true
+        B:"03.Track Sanity"=false
+        B:"04.Dark Affects Sanity"=false
         D:"05.Sanity Multiplier"=1.0
-        B:"06.Track Air Quility"=true
+        B:"06.Track Air Quility"=false
         D:"07.Air Quility Multiplier"=1.0
-        B:"08.Track Hydration"=true
+        B:"08.Track Hydration"=false
         D:"09.Hydration Multiplier"=1.0
-        B:"10.Track Temperature"=true
+        B:"10.Track Temperature"=false
         D:"11.Temperature Multiplier"=1.0
-        B:"12.Day/Night Affects Temp"=true
-        B:"13.Weather Affects Temp"=true
-        B:"14.Generate Mineshafts"=true
+        B:"12.Day/Night Affects Temp"=false
+        B:"13.Weather Affects Temp"=false
+        B:"14.Generate Mineshafts"=false
         I:"15.Where is Sea Level"=340
 
         # Use a negitive value to skip shaft entrance checks [range: -255 ~ 255, default: 12]
@@ -63,18 +63,18 @@ dimension {
     Asteroids {
         I:"01.Dimension ID"=-30
         B:"02.Allow Config Override"=true
-        B:"03.Track Sanity"=true
-        B:"04.Dark Affects Sanity"=true
+        B:"03.Track Sanity"=false
+        B:"04.Dark Affects Sanity"=false
         D:"05.Sanity Multiplier"=1.0
-        B:"06.Track Air Quility"=true
+        B:"06.Track Air Quility"=false
         D:"07.Air Quility Multiplier"=1.0
-        B:"08.Track Hydration"=true
+        B:"08.Track Hydration"=false
         D:"09.Hydration Multiplier"=1.0
-        B:"10.Track Temperature"=true
+        B:"10.Track Temperature"=false
         D:"11.Temperature Multiplier"=1.0
-        B:"12.Day/Night Affects Temp"=true
-        B:"13.Weather Affects Temp"=true
-        B:"14.Generate Mineshafts"=true
+        B:"12.Day/Night Affects Temp"=false
+        B:"13.Weather Affects Temp"=false
+        B:"14.Generate Mineshafts"=false
         I:"15.Where is Sea Level"=340
 
         # Use a negitive value to skip shaft entrance checks [range: -255 ~ 255, default: 12]
