--- a/config/enviromine/profiles/default/CustomProperties/RandomThings.cfg
+++ b/config/enviromine/profiles/default/CustomProperties/RandomThings.cfg
@@ -1,2 +1,39 @@
 # Configuration file
 
+##########################################################################################################
+# dimension
+#--------------------------------------------------------------------------------------------------------#
+# Customise dimension environments
+##########################################################################################################
+
+dimension {
+
+    Spectre {
+        I:"01.Dimension ID"=2
+        B:"02.Allow Config Override"=true
+        B:"03.Track Sanity"=false
+        B:"04.Dark Affects Sanity"=false
+        D:"05.Sanity Multiplier"=1.0
+        B:"06.Track Air Quility"=false
+        D:"07.Air Quility Multiplier"=1.0
+        B:"08.Track Hydration"=false
+        D:"09.Hydration Multiplier"=1.0
+        B:"10.Track Temperature"=false
+        D:"11.Temperature Multiplier"=1.0
+        B:"12.Day/Night Affects Temp"=false
+        B:"13.Weather Affects Temp"=false
+        B:"14.Generate Mineshafts"=false
+        I:"15.Where is Sea Level"=340
+
+        # Use a negitive value to skip shaft entrance checks [range: -255 ~ 255, default: 12]
+        I:"16.Mine Y height"=-192
+        D:"17.Base Temperature Rate"=0.0
+        D:"18.Base Hydration Rate"=0.0
+        D:"19.Base Sanity Rate"=0.0
+        D:"20.Base Air Quality Rate"=0.0
+        B:"20.Enable Physics"=false
+    }
+
+}
+
+
