--- a/config/rftools/main.cfg
+++ b/config/rftools/main.cfg
@@ -203,7 +203,7 @@ dimlets {
     B:normalTerrainInheritsOverworld=false
 
     # If this is enabled (non-craftable) owner dimlets are required to construct dimension tabs. This is useful on servers where you want to limit the amount of dimensions a player can make
-    B:ownerDimletsNeeded=true
+    B:ownerDimletsNeeded=false
 
     # RF per tick that the phased field generator item will consume
     I:phasedFieldConsumePerTick=1000
